some small corrections here and there

--- a/code-postprocessing/cocopp/latex_commands_for_html.html
+++ b/code-postprocessing/cocopp/latex_commands_for_html.html
@@ -972,7 +972,7 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
         Entries, succeeded by a star, are statistically significantly better (according to
         the rank-sum test) when compared to all other algorithms of the table, with
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k following the star is larger
-        than 1, with Bonferroni correction by the number of functions (24). A &#8595; indicates the same tested against . Best results are printed in bold.
+        than 1, with Bonferroni correction by the number of functions (24). Best results are printed in bold.
         ??COCOVERSION??
 
 <div class="p"><!----></div>
@@ -1023,5 +1023,5 @@ Average running time (<span class="roman">aRT</span>&nbsp;in log<sub>10</sub> of
 T<sub><span class="small">E</span></sub>X
 by <a href="http://hutchinson.belmont.ma.us/tth/">
 T<sub><span class="small">T</span></sub>H</a>,
-version 4.08.<br />On 25 May 2018, 17:54.</small>
+version 4.08.<br />On 28 Jan 2019, 11:36.</small>
 </html>
