moved the \cocoversion command from the automatically generated LaTeX commands for the caption texts to the LaTeX templates in order to be able to add text more easily, solving #1884

--- a/code-postprocessing/cocopp/latex_commands_for_html.html
+++ b/code-postprocessing/cocopp/latex_commands_for_html.html
@@ -108,7 +108,7 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
         the rank-sum test) compared to the best algorithm from BBOB 2009, with
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k  &gt;  1 is following the
         &#8595; symbol, with Bonferroni correction by the number of
-        functions (24).??COCOVERSION??
+        functions (24).
 
 <div class="p"><!----></div>
 ##bbobpptablesmanylegendrlbased##
@@ -126,7 +126,6 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
         the rank-sum test) when compared to all other algorithms of the table, with
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k following the star is larger
         than 1, with Bonferroni correction by the number of functions (24). A &#8595; indicates the same tested against the best algorithm from BBOB 2009. Best results are printed in bold.
-        ??COCOVERSION??
 
 <div class="p"><!----></div>
 ##bbobppscatterlegendrlbased##
@@ -161,7 +160,7 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in log<sub>10</sub> o
         (box), 10-90%-ile (caps), and minimum and maximum <span class="roman">ERT</span>&nbsp;loss ratio
         (points). The vertical line gives the maximal number of function evaluations
         in a single trial in this function subset. See also
-        the following figure for results on each function subgroup.??COCOVERSION??
+        the following figure for results on each function subgroup.
 
 <div class="p"><!----></div>
 ##bbobloglossfigurecaptionrlbased##
@@ -254,7 +253,7 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
         the rank-sum test) compared to the best algorithm from BBOB 2009, with
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k  &gt;  1 is following the
         &#8595; symbol, with Bonferroni correction by the number of
-        functions (24).??COCOVERSION??
+        functions (24).
 
 <div class="p"><!----></div>
 ##bbobpptablesmanylegendfixed##
@@ -273,7 +272,6 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
         the rank-sum test) when compared to all other algorithms of the table, with
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k following the star is larger
         than 1, with Bonferroni correction by the number of functions (24). A &#8595; indicates the same tested against the best algorithm from BBOB 2009. Best results are printed in bold.
-        ??COCOVERSION??
 
 <div class="p"><!----></div>
 ##bbobppscatterlegendfixed##
@@ -305,7 +303,7 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in log<sub>10</sub> o
         (box), 10-90%-ile (caps), and minimum and maximum <span class="roman">ERT</span>&nbsp;loss ratio
         (points). The vertical line gives the maximal number of function evaluations
         in a single trial in this function subset. See also
-        the following figure for results on each function subgroup.??COCOVERSION??
+        the following figure for results on each function subgroup.
 
 <div class="p"><!----></div>
 ##bbobloglossfigurecaptionfixed##
@@ -396,7 +394,7 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
         the rank-sum test) compared to the best algorithm from BBOB 2016, with
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k  &gt;  1 is following the
         &#8595; symbol, with Bonferroni correction by the number of
-        functions (55).??COCOVERSION??
+        functions (55).
 
 <div class="p"><!----></div>
 ##bbobpptablesmanylegendbiobjfixed##
@@ -415,7 +413,6 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
         the rank-sum test) when compared to all other algorithms of the table, with
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k following the star is larger
         than 1, with Bonferroni correction by the number of functions (55). A &#8595; indicates the same tested against the best algorithm from BBOB 2016. Best results are printed in bold.
-        ??COCOVERSION??
 
 <div class="p"><!----></div>
 ##bbobppscatterlegendbiobjfixed##
@@ -447,7 +444,7 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in log<sub>10</sub> o
         (box), 10-90%-ile (caps), and minimum and maximum <span class="roman">ERT</span>&nbsp;loss ratio
         (points). The vertical line gives the maximal number of function evaluations
         in a single trial in this function subset. See also
-        the following figure for results on each function subgroup.??COCOVERSION??
+        the following figure for results on each function subgroup.
 
 <div class="p"><!----></div>
 ##bbobloglossfigurecaptionbiobjfixed##
@@ -541,7 +538,7 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
         the rank-sum test) compared to the best algorithm from BBOB 2016, with
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k  &gt;  1 is following the
         &#8595; symbol, with Bonferroni correction by the number of
-        functions (55).??COCOVERSION??
+        functions (55).
 
 <div class="p"><!----></div>
 ##bbobpptablesmanylegendbiobjrlbased##
@@ -559,7 +556,6 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
         the rank-sum test) when compared to all other algorithms of the table, with
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k following the star is larger
         than 1, with Bonferroni correction by the number of functions (55). A &#8595; indicates the same tested against the best algorithm from BBOB 2016. Best results are printed in bold.
-        ??COCOVERSION??
 
 <div class="p"><!----></div>
 ##bbobppscatterlegendbiobjrlbased##
@@ -594,7 +590,7 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in log<sub>10</sub> o
         (box), 10-90%-ile (caps), and minimum and maximum <span class="roman">ERT</span>&nbsp;loss ratio
         (points). The vertical line gives the maximal number of function evaluations
         in a single trial in this function subset. See also
-        the following figure for results on each function subgroup.??COCOVERSION??
+        the following figure for results on each function subgroup.
 
 <div class="p"><!----></div>
 ##bbobloglossfigurecaptionbiobjrlbased##
@@ -700,7 +696,6 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
         the rank-sum test) when compared to all other algorithms of the table, with
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k following the star is larger
         than 1, with Bonferroni correction by the number of functions (92). Best results are printed in bold.
-        ??COCOVERSION??
 
 <div class="p"><!----></div>
 ##bbobppscatterlegendbiobjextfixed##
@@ -732,7 +727,7 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in log<sub>10</sub> o
         (box), 10-90%-ile (caps), and minimum and maximum <span class="roman">ERT</span>&nbsp;loss ratio
         (points). The vertical line gives the maximal number of function evaluations
         in a single trial in this function subset. See also
-        the following figure for results on each function subgroup.??COCOVERSION??
+        the following figure for results on each function subgroup.
 
 <div class="p"><!----></div>
 ##bbobloglossfigurecaptionbiobjextfixed##
@@ -838,7 +833,6 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
         the rank-sum test) when compared to all other algorithms of the table, with
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k following the star is larger
         than 1, with Bonferroni correction by the number of functions (48). A &#8595; indicates the same tested against . Best results are printed in bold.
-        ??COCOVERSION??
 
 <div class="p"><!----></div>
 ##bbobppscatterlegendconstrainedfixed##
@@ -870,7 +864,7 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in log<sub>10</sub> o
         (box), 10-90%-ile (caps), and minimum and maximum <span class="roman">ERT</span>&nbsp;loss ratio
         (points). The vertical line gives the maximal number of function evaluations
         in a single trial in this function subset. See also
-        the following figure for results on each function subgroup.??COCOVERSION??
+        the following figure for results on each function subgroup.
 
 <div class="p"><!----></div>
 ##bbobloglossfigurecaptionconstrainedfixed##
@@ -973,7 +967,6 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
         the rank-sum test) when compared to all other algorithms of the table, with
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k following the star is larger
         than 1, with Bonferroni correction by the number of functions (24). Best results are printed in bold.
-        ??COCOVERSION??
 
 <div class="p"><!----></div>
 ##bbobppscatterlegendlargescalefixed##
@@ -1005,7 +998,7 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in log<sub>10</sub> o
         (box), 10-90%-ile (caps), and minimum and maximum <span class="roman">ERT</span>&nbsp;loss ratio
         (points). The vertical line gives the maximal number of function evaluations
         in a single trial in this function subset. See also
-        the following figure for results on each function subgroup.??COCOVERSION??
+        the following figure for results on each function subgroup.
 
 <div class="p"><!----></div>
 ##bbobloglossfigurecaptionlargescalefixed##
@@ -1108,7 +1101,6 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
         the rank-sum test) when compared to all other algorithms of the table, with
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k following the star is larger
         than 1, with Bonferroni correction by the number of functions (24). Best results are printed in bold.
-        ??COCOVERSION??
 
 <div class="p"><!----></div>
 ##bbobppscatterlegendmixintfixed##
@@ -1140,7 +1132,7 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in log<sub>10</sub> o
         (box), 10-90%-ile (caps), and minimum and maximum <span class="roman">ERT</span>&nbsp;loss ratio
         (points). The vertical line gives the maximal number of function evaluations
         in a single trial in this function subset. See also
-        the following figure for results on each function subgroup.??COCOVERSION??
+        the following figure for results on each function subgroup.
 
 <div class="p"><!----></div>
 ##bbobloglossfigurecaptionmixintfixed##
@@ -1243,7 +1235,6 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
         the rank-sum test) when compared to all other algorithms of the table, with
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k following the star is larger
         than 1, with Bonferroni correction by the number of functions (24). Best results are printed in bold.
-        ??COCOVERSION??
 
 <div class="p"><!----></div>
 ##bbobppscatterlegendbiobjmixintfixed##
@@ -1275,7 +1266,7 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in log<sub>10</sub> o
         (box), 10-90%-ile (caps), and minimum and maximum <span class="roman">ERT</span>&nbsp;loss ratio
         (points). The vertical line gives the maximal number of function evaluations
         in a single trial in this function subset. See also
-        the following figure for results on each function subgroup.??COCOVERSION??
+        the following figure for results on each function subgroup.
 
 <div class="p"><!----></div>
 ##bbobloglossfigurecaptionbiobjmixintfixed##
@@ -1293,5 +1284,5 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in log<sub>10</sub> o
 T<sub><span class="small">E</span></sub>X
 by <a href="http://hutchinson.belmont.ma.us/tth/">
 T<sub><span class="small">T</span></sub>H</a>,
-version 4.08.<br />On 30 Jan 2020, 13:26.</small>
+version 4.08.<br />On 21 Jan 2021, 23:35.</small>
 </html>
