--- a/code-postprocessing/cocopp/latex_commands_for_html.html
+++ b/code-postprocessing/cocopp/latex_commands_for_html.html
@@ -93,6 +93,7 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
         grid lines indicate a scaling with <i>O</i>(<span class="roman">DIM</span>) compared to
         <i>O</i>(1) when using the respective reference algorithm.
 
+
 <div class="p"><!----></div>
 ##bbobpptablecaptionrlbased##
 
@@ -181,7 +182,7 @@ Bootstrapped empirical cumulative distribution of the number of objective functi
 
 Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evaluations
                     as log<sub>10</sub> value), divided by dimension for target function value !!PPFIGS&#8722;FTARGET!!
-                    versus dimension. Slanted grid lines indicate quadratic scaling with the dimension. Different symbols correspond to different algorithms given in the legend of f<sub>1</sub> and f<sub>24</sub>. Light symbols give the maximum number of function evaluations from the longest trial divided by dimension. Black stars indicate a statistically better result compared to all other algorithms with p &lt; 0.01 and Bonferroni correction number of dimensions (six).  
+                    versus dimension. Slanted grid lines indicate quadratic scaling with the dimension. Different symbols correspond to different algorithms given in the legend of f<sub>1</sub> and f<sub>24</sub>. Light symbols give the maximum number of function evaluations from the longest trial divided by dimension. Black stars indicate a statistically better result compared to all other algorithms with p &lt; 0.01 and Bonferroni correction number of dimensions (six).
 
 <div class="p"><!----></div>
 ##bbobpprldistrlegendfixed##
@@ -749,6 +750,14 @@ Bootstrapped empirical cumulative distribution of the number of objective functi
 Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evaluations
                     as log<sub>10</sub> value), divided by dimension for target function value !!PPFIGS&#8722;FTARGET!!
                     versus dimension. Slanted grid lines indicate quadratic scaling with the dimension. Different symbols correspond to different algorithms given in the legend of f<sub>1</sub> and f<sub>54</sub>. Light symbols give the maximum number of function evaluations from the longest trial divided by dimension. Black stars indicate a statistically better result compared to all other algorithms with p &lt; 0.01 and Bonferroni correction number of dimensions (six).  
+
+<div class="p"><!----></div>
+##bbobppfigconslegendconstrainedfixed##
+
+Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evaluations
+                    as log<sub>10</sub> value), divided by dimension for target function value !!PPFIGS&#8722;FTARGET!!
+                    versus number of constraints. Slanted grid lines indicate quadratic scaling with the dimension. Different symbols correspond to different algorithms given in the legend of f<sub>1</sub>.
+                    If the success ratio is > 0 and below a given value (default 1/2), the symbol is annotated with the number of successes. Light symbols give the maximum number of function evaluations from the longest trial divided by dimension.  "Black stars indicate a statistically better result compared to all other algorithms with p &lt; 0.01 and Bonferroni correction number of dimensions (six).
 
 <div class="p"><!----></div>
 ##bbobpprldistrlegendconstrainedfixed##
