add scaling vs constraints plot for single algo
almost there

add file

last changes

--- a/code-postprocessing/cocopp/latex_commands_for_html.html
+++ b/code-postprocessing/cocopp/latex_commands_for_html.html
@@ -814,6 +814,23 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
         grid lines depict quadratic scaling.
 
 <div class="p"><!----></div>
+##bbobppfigcons1legendconstrainedfixed##
+
+        Scaling of runtime with number of constraints to reach certain target values &#8710;f.
+        Lines: expected runtime (<span class="roman">ERT</span>);
+        Cross (+): median runtime of successful runs to reach the most difficult
+        target that was reached at least once (but not always);
+        Cross (<span style="color:#FF0000">&times;</span>): maximum number of
+        evaluations in any trial. Notched boxes: interquartile range with median of simulated runs; 
+        All values are divided by dimension and  
+        plotted as log<sub>10</sub> values versus number of constraints.                 Shown is the <span class="roman">ERT</span>&nbsp;for fixed values of &#8710;f
+= 10<sup>k</sup> with k given
+        in the legend.
+        Numbers above <span class="roman">ERT</span>-symbols (if appearing) indicate the number of trials
+        reaching the respective target.  Horizontal lines mean linear scaling, slanted
+        grid lines depict quadratic scaling.
+
+<div class="p"><!----></div>
 ##bbobpptablecaptionconstrainedfixed##
 
         Expected runtime (<span class="roman">ERT</span>) to reach given targets, measured
