--- a/code-postprocessing/cocopp/latex_commands_for_html.html
+++ b/code-postprocessing/cocopp/latex_commands_for_html.html
@@ -742,36 +742,36 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in log<sub>10</sub> o
 <div class="p"><!----></div>
 ##bbobECDFslegendconstrainedfixed##
 
-Bootstrapped empirical cumulative distribution of the number of objective function evaluations divided by dimension (FEvals/DIM) for !!NUM&#8722;OF&#8722;TARGETS&#8722;IN&#8722;ECDF!! targets with target precision in !!TARGET-RANGES-IN-ECDF!! for all functions and subgroups in -D. 
+Bootstrapped empirical cumulative distribution of the number of evaluations divided by dimension (FEvals/DIM) for !!NUM&#8722;OF&#8722;TARGETS&#8722;IN&#8722;ECDF!! targets with target precision in !!TARGET-RANGES-IN-ECDF!! for all functions and subgroups in -D. 
 
 <div class="p"><!----></div>
 ##bbobppfigslegendconstrainedfixed##
 
-Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evaluations
+Expected running time (<span class="roman">ERT</span>&nbsp;in number of evaluations
                     as log<sub>10</sub> value), divided by dimension for target function value !!PPFIGS&#8722;FTARGET!!
-                    versus dimension. Slanted grid lines indicate quadratic scaling with the dimension. Different symbols correspond to different algorithms given in the legend of f<sub>1</sub> and f<sub>54</sub>. Light symbols give the maximum number of function evaluations from the longest trial divided by dimension. Black stars indicate a statistically better result compared to all other algorithms with p &lt; 0.01 and Bonferroni correction number of dimensions (six).  
+                    versus dimension. Slanted grid lines indicate quadratic scaling with the dimension. Different symbols correspond to different algorithms given in the legend of f<sub>1</sub> and f<sub>54</sub>. Light symbols give the maximum number of evaluations from the longest trial divided by dimension. Black stars indicate a statistically better result compared to all other algorithms with p &lt; 0.01 and Bonferroni correction number of dimensions (six).  
 
 <div class="p"><!----></div>
 ##bbobppfigconslegendconstrainedfixed##
 
-Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evaluations
+Expected running time (<span class="roman">ERT</span>&nbsp;in number of evaluations
                     as log<sub>10</sub> value), divided by dimension for target function value !!PPFIGS&#8722;FTARGET!!
                     versus number of constraints. Slanted grid lines indicate quadratic scaling with the dimension. Different symbols correspond to different algorithms given in the legend of f<sub>1</sub>.
-                    If the success ratio is > 0 and below a given value (default 1/2), the symbol is annotated with the number of successes. Light symbols give the maximum number of function evaluations from the longest trial divided by dimension.  "Black stars indicate a statistically better result compared to all other algorithms with p &lt; 0.01 and Bonferroni correction number of dimensions (six).
+                    If the success ratio is > 0 and below a given value (default 1/2), the symbol is annotated with the number of successes. Light symbols give the maximum number of evaluations from the longest trial divided by dimension.  "Black stars indicate a statistically better result compared to all other algorithms with p &lt; 0.01 and Bonferroni correction number of dimensions (six).
 
 <div class="p"><!----></div>
 ##bbobpprldistrlegendconstrainedfixed##
 
          Empirical cumulative distribution functions (ECDF), plotting the fraction of
          trials with an outcome not larger than the respective value on the x-axis.
-                  Left subplots: ECDF of the number of function evaluations ((f+g)-evals) divided by search space dimension D,
+                  Left subplots: ECDF of the number of evaluations divided by search space dimension D,
          to fall below f<sub><span class="roman">opt</span></sub>+&#8710;f with &#8710;f
 =10<sup>k</sup>, where k is the first value in the legend.
          The thick red line represents the most difficult target value f<sub><span class="roman">opt</span></sub>+ 10<sup>&#8722;6</sup>.          Legends indicate for each target the number of functions that were solved in at
          least one trial within the displayed budget.
          Right subplots: ECDF of the best achieved &#8710;f
          for running times of 0.5D, 1.2D, 3D, 10D, 100D, 1000D,...
-         function evaluations
+         evaluations
          (from right to left cycling cyan-magenta-black...) and final &#8710;f-value (red),
          where &#8710;fand <span style="font-family:helvetica">Df</span> denote the difference to the optimal function value. 
          Shown are aggregations over problems where the objective
@@ -784,7 +784,7 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
         Empirical cumulative distributions (ECDF)
         of run lengths and speed-up ratios in 5-D (left) and 20-D (right).
         Left sub-columns: ECDF of
-        the number of function evaluations divided by dimension D
+        the number of evaluations divided by dimension D
         (FEvals/D)         to reach a target value f<sub><span class="roman">opt</span></sub>+&#8710;f with &#8710;f
 =10<sup>k</sup>, where
         k is given by the first value in the legend, for
@@ -804,7 +804,7 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
         Cross (+): median runtime of successful runs to reach the most difficult
         target that was reached at least once (but not always);
         Cross (<span style="color:#FF0000">&times;</span>): maximum number of
-        f-evaluations in any trial. Notched boxes: interquartile range with median of simulated runs; 
+        evaluations in any trial. Notched boxes: interquartile range with median of simulated runs; 
         All values are divided by dimension and  
         plotted as log<sub>10</sub> values versus dimension.                 Shown is the <span class="roman">ERT</span>&nbsp;for fixed values of &#8710;f
 = 10<sup>k</sup> with k given
@@ -834,20 +834,20 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
 ##bbobpptablecaptionconstrainedfixed##
 
         Expected runtime (<span class="roman">ERT</span>) to reach given targets, measured
-        in number of function evaluations in different dimensions. For each function, the <span class="roman">ERT</span>&nbsp;
+        in number of evaluations in different dimensions. For each function, the <span class="roman">ERT</span>&nbsp;
         and, in braces as dispersion measure, the half difference between 10 and 
         90%-tile of (bootstrapped) runtimes is shown for the different
         target &#8710;f-values as shown in the top row. 
         #succ is the number of trials that reached the last target 
         f<sub><span class="roman">opt</span></sub>+ 10<sup>&#8722;6</sup>.
-        The median number of conducted function evaluations is additionally given in 
+        The median number of conducted evaluations is additionally given in 
         <i>italics</i>, if the target in the last column was never reached. 
 
 <div class="p"><!----></div>
 ##bbobpptablesmanylegendconstrainedfixed##
 
         Expected runtime (<span class="roman">ERT</span>) to reach given targets, measured
-        in number of function evaluations, in different dimensions. For each function, the <span class="roman">ERT</span>&nbsp;
+        in number of evaluations, in different dimensions. For each function, the <span class="roman">ERT</span>&nbsp;
         and, in braces as dispersion measure, the half difference between 10 and 
         90%-tile of (bootstrapped) runtimes is shown for the different
         target &#8710;f-values as shown in the top row. 
@@ -863,7 +863,7 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
 <div class="p"><!----></div>
 ##bbobppscatterlegendconstrainedfixed##
 
-Expected running time (<span class="roman">ERT</span>&nbsp;in log<sub>10</sub> of number of function evaluations)
+Expected running time (<span class="roman">ERT</span>&nbsp;in log<sub>10</sub> of number of evaluations)
         of algorithmA&nbsp;(y-axis) versus algorithmB&nbsp;(x-axis) for !!NBTARGETS&#8722;SCATTER!! target values
         !!DF!!  &#8712; [!!NBLOW!!, !!NBUP!!] in each dimension on functions f<sub>1</sub> - f<sub>54</sub>. Markers on the upper or right edge indicate that the respective target
         value was never reached. Markers represent dimension:
@@ -877,10 +877,10 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in log<sub>10</sub> o
 <div class="p"><!----></div>
 ##bbobloglosstablecaptionconstrainedfixed##
 
-        <span class="roman">ERT</span>&nbsp;loss ratio versus the budget in number of f-evaluations
+        <span class="roman">ERT</span>&nbsp;loss ratio versus the budget in number of evaluations
         divided by dimension.
         For each given budget <span class="roman">FEvals</span>, the target value f<sub><span class="roman">t</span></sub>&nbsp;is computed
-        as the best target f-value reached within the
+        as the best target value reached within the
         budget by the given algorithm.
         Shown is then the <span class="roman">ERT</span>&nbsp;to reach f<sub><span class="roman">t</span></sub>&nbsp;for the given algorithm
         or the budget, if 
