--- a/code-postprocessing/cocopp/latex_commands_for_html.html
+++ b/code-postprocessing/cocopp/latex_commands_for_html.html
@@ -848,6 +848,29 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in log<sub>10</sub> o
         is the geometric mean.
 
 <div class="p"><!----></div>
+##bbobppfigconslegendconstrainedfixed##
+
+Expected running time (<span class="roman">ERT</span>&nbsp;in number of evaluations
+                    as log<sub>10</sub> value), divided by dimension for target function value !!PPFIGS&#8722;FTARGET!!
+                    versus number of constraints. Slanted grid lines indicate quadratic scaling with the dimension. Different symbols correspond to different algorithms given in the legend of f<sub>1</sub> - f<sub>54</sub>. If the success ratio is &lt; 1/2 and &#62; 0 the symbol is annotated with the number of successes. Light symbols give the maximum number of evaluations from the longest trial divided by dimension. Black stars indicate a statistically better result compared to all other algorithms with p &lt; 0.01 and Bonferroni correction number of constraints (six).  
+
+<div class="p"><!----></div>
+##bbobppfigconsonelegendconstrainedfixed##
+
+        Scaling of runtime with number of constraints to reach certain target values.
+        Lines: expected runtime (<span class="roman">ERT</span>);
+        Cross (+): median runtime of successful runs to reach the most difficult
+        target that was reached at least once (but not always);
+        Cross (<span style="color:#FF0000">&times;</span>): maximum number of
+        evaluations in any trial. Notched boxes: interquartile range with median of simulated runs; 
+        All values are divided by dimension and  
+        plotted as log<sub>10</sub> values versus dimension.                 Shown is the <span class="roman">ERT</span>&nbsp;for fixed target precision values of 10<sup>k</sup> with k given
+        in the legend.
+        Numbers above <span class="roman">ERT</span>-symbols (if appearing) indicate the number of trials
+        reaching the respective target.  Horizontal lines mean linear scaling, slanted
+        grid lines depict quadratic scaling.
+
+<div class="p"><!----></div>
 ##bbobECDFslegendlargescalefixed##
 
 Bootstrapped empirical cumulative distribution of the number of f-evaluations divided by dimension (FEvals/DIM) for !!NUM&#8722;OF&#8722;TARGETS&#8722;IN&#8722;ECDF!! targets with target precision in !!TARGET-RANGES-IN-ECDF!! for all functions and subgroups in -D. 
@@ -1244,5 +1267,5 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in log<sub>10</sub> o
 T<sub><span class="small">E</span></sub>X
 by <a href="http://hutchinson.belmont.ma.us/tth/">
 T<sub><span class="small">T</span></sub>H</a>,
-version 4.08.<br />On  8 Feb 2022, 19:31.</small>
+version 4.08.<br />On  9 Feb 2022, 00:00.</small>
 </html>
