minor modifs in table and tables, generate html

--- a/code-postprocessing/cocopp/latex_commands_for_html.html
+++ b/code-postprocessing/cocopp/latex_commands_for_html.html
@@ -92,13 +92,12 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
 <div class="p"><!----></div>
 ##bbobpptablecaptionrlbased##
 
-        Expected running time (<span class="roman">ERT</span>&nbsp;in number of function 
-        evaluations) divided by the <span class="roman">ERT</span>&nbsp;of the best algorithm from BBOB 2009 in different dimensions. This <span class="roman">ERT</span>&nbsp;        ratio and, in braces as dispersion measure, the half difference between 90 and
+        Expected runtime (<span class="roman">ERT</span>&nbsp;in number of f-evaluations) divided by the <span class="roman">ERT</span>&nbsp;of the best algorithm from BBOB 2009 in different dimensions. This <span class="roman">ERT</span>&nbsp;        ratio and, in braces as dispersion measure, the half difference between 90 and
         10%-tile of bootstrapped run lengths appear in the second row of each cell,  
         the best <span class="roman">ERT</span>&nbsp;                in the first. The different target &#8710;f-values are shown in the top row. 
         #succ is the number of trials that reached the (final) target f<sub><span class="roman">opt</span></sub>
 + 10<sup>&#8722;8</sup>.
-                The median number of conducted function evaluations is additionally given in 
+                The median number of conducted evaluations is additionally given in 
         <i>italics</i>, if the target in the last column was never reached. 
         <b>Bold</b> entries are statistically significantly better (according to
         the rank-sum test) compared to the best algorithm from BBOB 2009, with
@@ -233,12 +232,11 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
 <div class="p"><!----></div>
 ##bbobpptablecaptionfixed##
 
-        Expected running time (<span class="roman">ERT</span>&nbsp;in number of function 
-        evaluations) divided by the <span class="roman">ERT</span>&nbsp;of the best algorithm from BBOB 2009 in different dimensions. This <span class="roman">ERT</span>&nbsp;        ratio and, in braces as dispersion measure, the half difference between 90 and
+        Expected runtime (<span class="roman">ERT</span>&nbsp;in number of f-evaluations) divided by the <span class="roman">ERT</span>&nbsp;of the best algorithm from BBOB 2009 in different dimensions. This <span class="roman">ERT</span>&nbsp;        ratio and, in braces as dispersion measure, the half difference between 90 and
         10%-tile of bootstrapped run lengths appear in the second row of each cell,  
         the best <span class="roman">ERT</span>&nbsp;                (preceded by the target &#8710;f-value in <i>italics</i>) in the first. 
         #succ is the number of trials that reached the target value of the last column.
-                The median number of conducted function evaluations is additionally given in 
+                The median number of conducted evaluations is additionally given in 
         <i>italics</i>, if the target in the last column was never reached. 
         <b>Bold</b> entries are statistically significantly better (according to
         the rank-sum test) compared to the best algorithm from BBOB 2009, with
@@ -369,12 +367,11 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
 <div class="p"><!----></div>
 ##bbobpptablecaptionbiobjfixed##
 
-        Expected running time (<span class="roman">ERT</span>&nbsp;in number of function 
-        evaluations) divided by the <span class="roman">ERT</span>&nbsp;of the best algorithm from BBOB 2016 in different dimensions. This <span class="roman">ERT</span>&nbsp;        ratio and, in braces as dispersion measure, the half difference between 90 and
+        Expected runtime (<span class="roman">ERT</span>&nbsp;in number of f-evaluations) divided by the <span class="roman">ERT</span>&nbsp;of the best algorithm from BBOB 2016 in different dimensions. This <span class="roman">ERT</span>&nbsp;        ratio and, in braces as dispersion measure, the half difference between 90 and
         10%-tile of bootstrapped run lengths appear in the second row of each cell,  
         the best <span class="roman">ERT</span>&nbsp;                (preceded by the target &#8710;I-value in <i>italics</i>) in the first. 
         #succ is the number of trials that reached the target value of the last column.
-                The median number of conducted function evaluations is additionally given in 
+                The median number of conducted evaluations is additionally given in 
         <i>italics</i>, if the target in the last column was never reached. 
         <b>Bold</b> entries are statistically significantly better (according to
         the rank-sum test) compared to the best algorithm from BBOB 2016, with
@@ -507,13 +504,12 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
 <div class="p"><!----></div>
 ##bbobpptablecaptionbiobjrlbased##
 
-        Expected running time (<span class="roman">ERT</span>&nbsp;in number of function 
-        evaluations) divided by the <span class="roman">ERT</span>&nbsp;of the best algorithm from BBOB 2016 in different dimensions. This <span class="roman">ERT</span>&nbsp;        ratio and, in braces as dispersion measure, the half difference between 90 and
+        Expected runtime (<span class="roman">ERT</span>&nbsp;in number of f-evaluations) divided by the <span class="roman">ERT</span>&nbsp;of the best algorithm from BBOB 2016 in different dimensions. This <span class="roman">ERT</span>&nbsp;        ratio and, in braces as dispersion measure, the half difference between 90 and
         10%-tile of bootstrapped run lengths appear in the second row of each cell,  
         the best <span class="roman">ERT</span>&nbsp;                in the first. The different target &#8710;I-values are shown in the top row. 
         #succ is the number of trials that reached the (final) target I<sup><span class="roman">ref</span></sup>
 + 10<sup>&#8722;5</sup>.
-                The median number of conducted function evaluations is additionally given in 
+                The median number of conducted evaluations is additionally given in 
         <i>italics</i>, if the target in the last column was never reached. 
         <b>Bold</b> entries are statistically significantly better (according to
         the rank-sum test) compared to the best algorithm from BBOB 2016, with
@@ -647,13 +643,13 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
 ##bbobpptablecaptionbiobjextfixed##
 
         Expected runtime (<span class="roman">ERT</span>) to reach given targets, measured
-        in number of function evaluations in different dimensions. For each function, the <span class="roman">ERT</span>&nbsp;
+        in number of f-evaluations in different dimensions. For each function, the <span class="roman">ERT</span>&nbsp;
         and, in braces as dispersion measure, the half difference between 10 and 
         90%-tile of (bootstrapped) runtimes is shown for the different
         target &#8710;I-values as shown in the top row. 
         #succ is the number of trials that reached the last target 
         I<sup><span class="roman">ref</span></sup>+ 10<sup>&#8722;5</sup>.
-        The median number of conducted function evaluations is additionally given in 
+        The median number of conducted evaluations is additionally given in 
         <i>italics</i>, if the target in the last column was never reached. 
 
 <div class="p"><!----></div>
@@ -780,13 +776,13 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of evaluati
 ##bbobpptablecaptionconstrainedfixed##
 
         Expected runtime (<span class="roman">ERT</span>) to reach given targets, measured
-        in number of function evaluations in different dimensions. For each function, the <span class="roman">ERT</span>&nbsp;
+        in number of evaluations in different dimensions. For each function, the <span class="roman">ERT</span>&nbsp;
         and, in braces as dispersion measure, the half difference between 10 and 
         90%-tile of (bootstrapped) runtimes is shown for the different
-        target &#8710;f-values as shown in the top row. 
+        target precision values as shown in the top row. 
         #succ is the number of trials that reached the last target 
         f<sub><span class="roman">opt</span></sub>+ 10<sup>&#8722;6</sup>.
-        The median number of conducted function evaluations is additionally given in 
+        The median number of conducted evaluations is additionally given in 
         <i>italics</i>, if the target in the last column was never reached. 
 
 <div class="p"><!----></div>
@@ -796,7 +792,7 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of evaluati
         in number of evaluations, in different dimensions. For each function, the <span class="roman">ERT</span>&nbsp;
         and, in braces as dispersion measure, the half difference between 10 and 
         90%-tile of (bootstrapped) runtimes is shown for the different
-        target values as shown in the top row. 
+        target precision values as shown in the top row. 
         #succ is the number of trials that reached the last target
         f<sub><span class="roman">opt</span></sub>+ 10<sup>&#8722;6</sup>.
                 The median number of conducted function evaluations is additionally given in 
@@ -933,13 +929,13 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
 ##bbobpptablecaptionlargescalefixed##
 
         Expected runtime (<span class="roman">ERT</span>) to reach given targets, measured
-        in number of function evaluations in different dimensions. For each function, the <span class="roman">ERT</span>&nbsp;
+        in number of f-evaluations in different dimensions. For each function, the <span class="roman">ERT</span>&nbsp;
         and, in braces as dispersion measure, the half difference between 10 and 
         90%-tile of (bootstrapped) runtimes is shown for the different
         target &#8710;f-values as shown in the top row. 
         #succ is the number of trials that reached the last target 
         f<sub><span class="roman">opt</span></sub>+ 10<sup>&#8722;8</sup>.
-        The median number of conducted function evaluations is additionally given in 
+        The median number of conducted evaluations is additionally given in 
         <i>italics</i>, if the target in the last column was never reached. 
 
 <div class="p"><!----></div>
@@ -1063,13 +1059,13 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
 ##bbobpptablecaptionmixintfixed##
 
         Expected runtime (<span class="roman">ERT</span>) to reach given targets, measured
-        in number of function evaluations in different dimensions. For each function, the <span class="roman">ERT</span>&nbsp;
+        in number of f-evaluations in different dimensions. For each function, the <span class="roman">ERT</span>&nbsp;
         and, in braces as dispersion measure, the half difference between 10 and 
         90%-tile of (bootstrapped) runtimes is shown for the different
         target &#8710;f-values as shown in the top row. 
         #succ is the number of trials that reached the last target 
         f<sub><span class="roman">opt</span></sub>+ 10<sup>&#8722;8</sup>.
-        The median number of conducted function evaluations is additionally given in 
+        The median number of conducted evaluations is additionally given in 
         <i>italics</i>, if the target in the last column was never reached. 
 
 <div class="p"><!----></div>
@@ -1193,13 +1189,13 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
 ##bbobpptablecaptionbiobjmixintfixed##
 
         Expected runtime (<span class="roman">ERT</span>) to reach given targets, measured
-        in number of function evaluations in different dimensions. For each function, the <span class="roman">ERT</span>&nbsp;
+        in number of f-evaluations in different dimensions. For each function, the <span class="roman">ERT</span>&nbsp;
         and, in braces as dispersion measure, the half difference between 10 and 
         90%-tile of (bootstrapped) runtimes is shown for the different
         target &#8710;f-values as shown in the top row. 
         #succ is the number of trials that reached the last target 
         f<sub><span class="roman">opt</span></sub>+ 10<sup>&#8722;8</sup>.
-        The median number of conducted function evaluations is additionally given in 
+        The median number of conducted evaluations is additionally given in 
         <i>italics</i>, if the target in the last column was never reached. 
 
 <div class="p"><!----></div>
@@ -1267,5 +1263,5 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in log<sub>10</sub> o
 T<sub><span class="small">E</span></sub>X
 by <a href="http://hutchinson.belmont.ma.us/tth/">
 T<sub><span class="small">T</span></sub>H</a>,
-version 4.08.<br />On 28 Feb 2022, 10:12.</small>
+version 4.08.<br />On 28 Feb 2022, 10:50.</small>
 </html>
