--- a/code-postprocessing/cocopp/latex_commands_for_html.html
+++ b/code-postprocessing/cocopp/latex_commands_for_html.html
@@ -119,7 +119,9 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
         Entries, succeeded by a star, are statistically significantly better (according to
         the rank-sum test) when compared to all other algorithms of the table, with
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k following the star is larger
-        than 1, with Bonferroni correction by the number of functions (24). A &#8595; indicates the same tested against the best algorithm from BBOB 2009. Best results are printed in bold.
+        than 1, with Bonferroni correction by the number of functions (24). A &#8593; signifies the number of trials that were worse than the ERT of the best algorithm from BBOB 2009
+        shown only when less than 10 percent were worse and the ERT was better.
+        Best results are printed in bold.
 
 <div class="p"><!----></div>
 ##bbobppscatterlegendrlbased##
@@ -259,7 +261,9 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
         Entries, succeeded by a star, are statistically significantly better (according to
         the rank-sum test) when compared to all other algorithms of the table, with
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k following the star is larger
-        than 1, with Bonferroni correction by the number of functions (24). A &#8595; indicates the same tested against the best algorithm from BBOB 2009. Best results are printed in bold.
+        than 1, with Bonferroni correction by the number of functions (24). A &#8593; signifies the number of trials that were worse than the ERT of the best algorithm from BBOB 2009
+        shown only when less than 10 percent were worse and the ERT was better.
+        Best results are printed in bold.
 
 <div class="p"><!----></div>
 ##bbobppscatterlegendfixed##
@@ -394,7 +398,9 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
         Entries, succeeded by a star, are statistically significantly better (according to
         the rank-sum test) when compared to all other algorithms of the table, with
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k following the star is larger
-        than 1, with Bonferroni correction by the number of functions (55). A &#8595; indicates the same tested against the best algorithm from BBOB 2016. Best results are printed in bold.
+        than 1, with Bonferroni correction by the number of functions (55). A &#8593; signifies the number of trials that were worse than the ERT of the best algorithm from BBOB 2016
+        shown only when less than 10 percent were worse and the ERT was better.
+        Best results are printed in bold.
 
 <div class="p"><!----></div>
 ##bbobppscatterlegendbiobjfixed##
@@ -531,7 +537,9 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
         Entries, succeeded by a star, are statistically significantly better (according to
         the rank-sum test) when compared to all other algorithms of the table, with
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k following the star is larger
-        than 1, with Bonferroni correction by the number of functions (55). A &#8595; indicates the same tested against the best algorithm from BBOB 2016. Best results are printed in bold.
+        than 1, with Bonferroni correction by the number of functions (55). A &#8593; signifies the number of trials that were worse than the ERT of the best algorithm from BBOB 2016
+        shown only when less than 10 percent were worse and the ERT was better.
+        Best results are printed in bold.
 
 <div class="p"><!----></div>
 ##bbobppscatterlegendbiobjrlbased##
@@ -800,7 +808,9 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of evaluati
         Entries, succeeded by a star, are statistically significantly better (according to
         the rank-sum test) when compared to all other algorithms of the table, with
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k following the star is larger
-        than 1, with Bonferroni correction by the number of functions (54). A &#8595; indicates the same tested against . Best results are printed in bold.
+        than 1, with Bonferroni correction by the number of functions (54). A &#8593; signifies the number of trials that were worse than the ERT of a reference algorithm
+        shown only when less than 10 percent were worse and the ERT was better.
+        Best results are printed in bold.
 
 <div class="p"><!----></div>
 ##bbobppscatterlegendconstrainedfixed##
