minor fix in table caption

--- a/code-postprocessing/cocopp/latex_commands_for_html.html
+++ b/code-postprocessing/cocopp/latex_commands_for_html.html
@@ -108,7 +108,7 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
 <div class="p"><!----></div>
 ##bbobpptablesmanylegendrlbased##
 
-        Expected runtime (<span class="roman">ERT</span>&nbsp;in number of f-evaluations) divided by the respective best <span class="roman">ERT</span>&nbsp;measured during BBOB-2009 in
+        Expected runtime (<span class="roman">ERT</span>&nbsp;in number of f-evaluations) divided by the respective best <span class="roman">ERT</span>&nbsp;measured during BBOB-2009 (when finite) in
         different dimensions.
         This <span class="roman">ERT</span>&nbsp;ratio and, in braces as dispersion measure, the half difference between
         10 and 90%-tile of bootstrapped run lengths appear for each algorithm and 
@@ -249,7 +249,7 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
 <div class="p"><!----></div>
 ##bbobpptablesmanylegendfixed##
 
-        Expected runtime (<span class="roman">ERT</span>&nbsp;in number of f-evaluations) divided by the respective best <span class="roman">ERT</span>&nbsp;measured during BBOB-2009 in
+        Expected runtime (<span class="roman">ERT</span>&nbsp;in number of f-evaluations) divided by the respective best <span class="roman">ERT</span>&nbsp;measured during BBOB-2009 (when finite) in
         different dimensions.
         This <span class="roman">ERT</span>&nbsp;ratio and, in braces as dispersion measure, the half difference between
         10 and 90%-tile of bootstrapped run lengths appear for each algorithm and 
