Ran tth.exe to update latex_commands_for_html.hml

--- a/code-postprocessing/cocopp/latex_commands_for_html.html
+++ b/code-postprocessing/cocopp/latex_commands_for_html.html
@@ -52,8 +52,7 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
          Right subplots: ECDF of the best achieved &#8710;f
          for running times of 0.5D, 1.2D, 3D, 10D, 100D, 1000D,... f-evaluations (from right to left cycling cyan-magenta-black...) and final &#8710;f-value (red),
          where &#8710;fand <span style="font-family:helvetica">Df</span> denote the difference to the optimal function value. 
-         Light brown lines in the background show ECDFs for the most difficult target of all
-            algorithms benchmarked during BBOB-2009.
+         Light brown lines in the background show ECDFs for the most difficult target of 
 
 <div class="p"><!----></div>
 ##bbobpprldistrlegendtworlbased##
@@ -108,7 +107,7 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
 <div class="p"><!----></div>
 ##bbobpptablesmanylegendrlbased##
 
-        Expected runtime (<span class="roman">ERT</span>&nbsp;in number of f-evaluations) divided by the respective best <span class="roman">ERT</span>&nbsp;measured during BBOB-2009 (when finite) in
+        Expected runtime (<span class="roman">ERT</span>&nbsp;in number of f-evaluations) divided by the respective best <span class="roman">ERT</span>&nbsp;measured during BBOB-2009 in
         different dimensions.
         This <span class="roman">ERT</span>&nbsp;ratio and, in braces as dispersion measure, the half difference between
         10 and 90%-tile of bootstrapped run lengths appear for each algorithm and 
@@ -119,9 +118,7 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
         Entries, succeeded by a star, are statistically significantly better (according to
         the rank-sum test) when compared to all other algorithms of the table, with
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k following the star is larger
-        than 1, with Bonferroni correction by the number of functions (24). A &#8593; signifies the number of trials that were worse than the ERT of the best algorithm from BBOB 2009
-        shown only when less than 10 percent were worse and the ERT was better.
-        Best results are printed in bold.
+        than 1, with Bonferroni correction by the number of functions (24). A &#8595; indicates the same tested against the best algorithm from BBOB 2009. Best results are printed in bold.
 
 <div class="p"><!----></div>
 ##bbobppscatterlegendrlbased##
@@ -192,8 +189,7 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
          Right subplots: ECDF of the best achieved &#8710;f
          for running times of 0.5D, 1.2D, 3D, 10D, 100D, 1000D,... f-evaluations (from right to left cycling cyan-magenta-black...) and final &#8710;f-value (red),
          where &#8710;fand <span style="font-family:helvetica">Df</span> denote the difference to the optimal function value. 
-         Light brown lines in the background show ECDFs for the most difficult target of all
-            algorithms benchmarked during BBOB-2009.
+         Light brown lines in the background show ECDFs for the most difficult target of 
 
 <div class="p"><!----></div>
 ##bbobpprldistrlegendtwofixed##
@@ -249,7 +245,7 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
 <div class="p"><!----></div>
 ##bbobpptablesmanylegendfixed##
 
-        Expected runtime (<span class="roman">ERT</span>&nbsp;in number of f-evaluations) divided by the respective best <span class="roman">ERT</span>&nbsp;measured during BBOB-2009 (when finite) in
+        Expected runtime (<span class="roman">ERT</span>&nbsp;in number of f-evaluations) divided by the respective best <span class="roman">ERT</span>&nbsp;measured during BBOB-2009 in
         different dimensions.
         This <span class="roman">ERT</span>&nbsp;ratio and, in braces as dispersion measure, the half difference between
         10 and 90%-tile of bootstrapped run lengths appear for each algorithm and 
@@ -261,9 +257,7 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
         Entries, succeeded by a star, are statistically significantly better (according to
         the rank-sum test) when compared to all other algorithms of the table, with
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k following the star is larger
-        than 1, with Bonferroni correction by the number of functions (24). A &#8593; signifies the number of trials that were worse than the ERT of the best algorithm from BBOB 2009
-        shown only when less than 10 percent were worse and the ERT was better.
-        Best results are printed in bold.
+        than 1, with Bonferroni correction by the number of functions (24). A &#8595; indicates the same tested against the best algorithm from BBOB 2009. Best results are printed in bold.
 
 <div class="p"><!----></div>
 ##bbobppscatterlegendfixed##
@@ -398,9 +392,7 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
         Entries, succeeded by a star, are statistically significantly better (according to
         the rank-sum test) when compared to all other algorithms of the table, with
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k following the star is larger
-        than 1, with Bonferroni correction by the number of functions (55). A &#8593; signifies the number of trials that were worse than the ERT of the best algorithm from BBOB 2016
-        shown only when less than 10 percent were worse and the ERT was better.
-        Best results are printed in bold.
+        than 1, with Bonferroni correction by the number of functions (55). A &#8595; indicates the same tested against the best algorithm from BBOB 2016. Best results are printed in bold.
 
 <div class="p"><!----></div>
 ##bbobppscatterlegendbiobjfixed##
@@ -537,9 +529,7 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
         Entries, succeeded by a star, are statistically significantly better (according to
         the rank-sum test) when compared to all other algorithms of the table, with
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k following the star is larger
-        than 1, with Bonferroni correction by the number of functions (55). A &#8593; signifies the number of trials that were worse than the ERT of the best algorithm from BBOB 2016
-        shown only when less than 10 percent were worse and the ERT was better.
-        Best results are printed in bold.
+        than 1, with Bonferroni correction by the number of functions (55). A &#8595; indicates the same tested against the best algorithm from BBOB 2016. Best results are printed in bold.
 
 <div class="p"><!----></div>
 ##bbobppscatterlegendbiobjrlbased##
@@ -808,9 +798,7 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of evaluati
         Entries, succeeded by a star, are statistically significantly better (according to
         the rank-sum test) when compared to all other algorithms of the table, with
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k following the star is larger
-        than 1, with Bonferroni correction by the number of functions (54). A &#8593; signifies the number of trials that were worse than the ERT of a reference algorithm
-        shown only when less than 10 percent were worse and the ERT was better.
-        Best results are printed in bold.
+        than 1, with Bonferroni correction by the number of functions (54). A &#8595; indicates the same tested against . Best results are printed in bold.
 
 <div class="p"><!----></div>
 ##bbobppscatterlegendconstrainedfixed##
@@ -1273,5 +1261,5 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in log<sub>10</sub> o
 T<sub><span class="small">E</span></sub>X
 by <a href="http://hutchinson.belmont.ma.us/tth/">
 T<sub><span class="small">T</span></sub>H</a>,
-version 4.08.<br />On  2 Mar 2022, 10:16.</small>
+version 4.08.<br />On 09 Mar 2023, 21:20.</small>
 </html>
